--- a/seed/static/scaffold.css
+++ b/seed/static/scaffold.css
@@ -179,3 +179,25 @@ select, input, button, textarea {
 #editor textarea.src[readonly] {
   background: rgb(229,237,244);
 }
+
+.with-preview {
+  background-color: #eee7b9;
+  width: 99%;
+  padding: 4px 6px 4px 4px;
+  margin: 1em 0;
+}
+
+.with-preview h1 {
+  margin: 0.25em 0.25em 0 0.25em;
+  font-weight: normal;
+  font-size: 100%;
+}
+
+#preview {
+  background: white;
+  width: 100%;
+  overflow: visible;
+  height: 40em;
+  margin: 0.5em 0 0;
+  border: 1px solid #919191;
+}
