--- a/seed/static/scaffold.css
+++ b/seed/static/scaffold.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: #fff url(ribbon.jpg) repeat-x scroll 0 0;
+  background: #fff url(ribbon.png) repeat-x scroll 0 0;
   min-width: 400px;
   font: 11pt/15pt "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
   color: #424242;
@@ -16,6 +16,14 @@ body {
 body.with-topbar {
   border-top: 29px solid rgb(78,98,114);
   background-position: 0 29px;
+}
+
+#logo {
+  position: absolute;
+  text-indent: -9000em;
+  background: url(barley-logo.png) no-repeat;
+  width: 250px;
+  height: 80px;
 }
 
 #content {
