lexical hilighting of Haskell source

--- a/seed/static/barley.css
+++ b/seed/static/barley.css
@@ -255,7 +255,7 @@ body.with-topbar {
 
 #editor .CodeMirror-wrapping,
 #editor textarea.src {
-  background: #ffc;
+  background: #ffffe5;
   border: 1px solid #b1b18e;
 }
 
