--- a/seed/static/codemirror.css
+++ b/seed/static/codemirror.css
@@ -31,18 +31,22 @@ body.editbox[readonly] {
 .hs-comment { color: #236E25; font-style: italic; }
 .hs-pragma	{ }
 
+.hs-prelude-varid,
+.hs-prelude-varsym,
 .hs-special,
 .hs-varid,
 .hs-varsym	{ }
 
 .hs-conid,
-.hs-consym	{ color: #cc2900;
-  font-weight: bold;
-}
+.hs-consym	{ color: #cc2900; }
 
 .hs-reservedid,
 .hs-reservedop { color: #7f3500; font-weight: bold; }
 
 .hs-qualifier { color: #5e5e5e;}
 .hs-error	{ background-color: #ffe5e5; }
+
+.hs-prelude-varid,
+.hs-prelude-varsym,
+.hs-prelude-conid { color: #250087; }
 
