--- a/seed/static/barley.css
+++ b/seed/static/barley.css
@@ -279,26 +279,37 @@ body.with-topbar {
   background: #ffffe5;
 }
 
-
-.with-preview {
+.panel {
   background-color: #eee7b9;
   width: 99%;
   padding: 4px 6px 4px 4px;
   margin: 1em 0;
 }
 
-.with-preview h1 {
+.panel.with-errors{
+  background-color: #ffe5e5;
+}
+
+.panel h1 {
   margin: 0.25em 0.25em 0 0.25em;
   font-weight: normal;
 }
 
-#preview {
+.panel-content {
   background: white;
   width: 100%;
   overflow: visible;
-  height: 40em;
   margin: 0.5em 0 0;
   border: 1px solid #919191;
+}
+
+#preview {
+  height: 40em;
+}
+
+#errors {
+  font-size: 93%; /* 12pt */
+  line-height: 124%;
 }
 
 /* @end */
