--- a/seed/static/barley.css
+++ b/seed/static/barley.css
@@ -239,12 +239,44 @@ body.with-topbar {
 
 /* @group Source View */
 
-#edit-form {
+#source-page {
+  position: relative;
+}
+
+.button-set {
   text-align: right;
+}
+
+#rocker {
+  position: absolute;
+  width: 10em;
+  text-align: right;
+  top: 0;
+  right: 0;
+}
+
+.button-set button,
+.button-set input[type=button] {
+  padding: 0 0.75em;
+  margin: 0 0.25em;
+}
+
+
+#editor {
   margin: 0.5em 0 1em;
 }
 
-#editor {
+#editor .button-set {
+  position: absolute;
+  right: 0;
+  top: 2em;
+}
+
+#editor #editor-box + .button-set {
+  position: inherit;
+}
+
+#editor-box {
   font-family:monospace;
   font-size: 93%; /* 12pt */
   line-height: 124%;
@@ -255,22 +287,23 @@ body.with-topbar {
   padding-left: 0.75em;
 }
 
-#editor.editable {
+#editor-box.editable {
   background: #ff0 url(stripe.png);
 }
 
-#editor textarea,
-#editor .CodeMirror-wrapping {
+#editor-box textarea,
+#editor-box .CodeMirror-wrapping {
   padding-left: 3.72em;
 }
 
-#editor .CodeMirror-line-numbers {
+#editor-box .CodeMirror-line-numbers {
+  text-align: right;
   padding: 1em 1em 1em 0;
   width: 3em;
   color: #a9a9a9;
 }
 
-#editor .CodeMirror-line-numbers div.error-line {
+#editor-box .CodeMirror-line-numbers div.error-line {
   color: #ff4d4d;
   font-weight: bold;
   background: url(silk/exclamation.png) no-repeat -1px -1px;
@@ -289,12 +322,12 @@ body.with-topbar {
   border: 1px solid #b1b18e;
 }
 
-#editor textarea.src {
+#editor-box textarea.src {
   width: 100%;
 }
 
-#editor .CodeMirror-wrapping div,
-#editor .CodeMirror-wrapping iframe {
+#editor-box .CodeMirror-wrapping div,
+#editor-box .CodeMirror-wrapping iframe {
   background: #ffffe5;
 }
 
@@ -303,6 +336,7 @@ body.with-topbar {
   width: 99%;
   padding: 4px 6px 4px 4px;
   margin: 1em 0;
+  text-align: left;
 }
 
 .panel.with-errors{
@@ -322,11 +356,11 @@ body.with-topbar {
   border: 1px solid #919191;
 }
 
-#preview {
+#preview iframe {
   height: 40em;
 }
 
-#errors {
+#errors pre {
   font-size: 93%; /* 12pt */
   line-height: 124%;
 }
