--- a/seed/static/slides.css
+++ b/seed/static/slides.css
@@ -65,12 +65,20 @@ pre, code, kbd, samp, tt, .src {
 
 /* @end */
 
+#slides {
+  width: 32em;
+  height: 18em;
+  margin: 2em;
+  position: relative;
+  overflow: hidden;
+  padding: 1px;
+}
+
 .slide {
   background: #fff;
-  width: 31em;
   border: 1px solid #818181;
+  width: 31em;
   height: 17em;
-  margin: 2em;
   padding: 0.5em;
   position: absolute;
   top: 0;
