better gutter color, background, size

--- a/seed/static/barley.css
+++ b/seed/static/barley.css
@@ -307,7 +307,7 @@ body.with-topbar {
   line-height: 124%;
   margin: 1em 0;
   overflow: hidden;
-  background: #ffffe5;
+  background: #ededda;
   border: 1px solid #b1b18e;
   padding-left: 0.75em;
 }
